--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ section {
 
 .card-back {
   width: 25rem;
-  height: 600px;
+  height: 500px;
   background: var(--card);
   padding: 24px;
   display: flex;
@@ -183,7 +183,7 @@ section {
 .content  h3 {
   text-align: center;
   color: var(--titulo);
-  margin-bottom: 24px;
+  margin-bottom: 16px;
   font-size: 20px;
   position: relative;
   cursor: pointer;
@@ -192,6 +192,7 @@ section {
 .h3 {
   text-align: center;
   margin-bottom: -8px;
+  margin-top: -44px;
   font-size: 12px;
   position: relative;
   cursor: pointer;
@@ -339,7 +340,7 @@ h2:hover::before {
 }
 
 .div-btn {
-  margin: 40px 0 -60px 0;
+  margin: -20px 0 -60px 0;
   padding: 20px;
 }
 
